# AP_Lab

./: README.md
01/: BarghiCommite.c  Book_store.c  IliyaProblem.c  Multiply_of_matrix.c  Which_size.c
02/: Complete_Linked_list.c  Iliya_new_challenge.c  Sansorchi.c  file_work.c
03/Car class/: car.cpp  car.h  date.cpp  date.h  main.cpp  seat.cpp  seat.h  wheel.cpp  wheel.h
03/String b string/: String.cpp  String.h  main.cpp
03/point array/: PointArray.cpp  PointArray.h  parr.cpp  point.cpp  point.h
03/point folder/: ConsoleApplication2.cpp  point.h
04/: Stupid_Function.cpp
04/Date class/: Date.cpp  Date.h  main.cpp
05/: 3 template.cpp  Function Template.cpp
05/Vector/: Vector.cpp  Vector.h  main.cpp
06/Polynomial class/: Polynomial.cpp  Polynomial.h  main.cpp
06/Rational class/: Rational.cpp  Rational.h  main.cpp
06/Vector plus/: Vector_plus.cpp  Vector_plus.h  main.cpp
06/unique pairs/: main.cpp  pairs.cpp  pairs.h  uniquePairs.cpp  uniquePairs.h
07/: Multiplication.cpp
07/Inheritance/: Hierarchical_Inheritances.cpp  Hybrid_Inheritances.cpp  Multiple_Inheritances.cpp
07/Pay Check/: Employee.cpp  Employee.h  EmployeePay.cpp  EmployeePay.h  HourlyPay.cpp  HourlyPay.h  main.cpp
08/: Abstract_cache.cpp  Shapes.cpp
08/Virtual functions/: Person.cpp  Person.h  Professor.cpp  Professor.h  Student.cpp  (+2 more)
09/sign_in_up/: CMakeLists.txt  main.cpp  sign_in_up.cpp  sign_in_up.h  sign_in_up.ui  sign_up.cpp  sign_up.h
11/: Database.cpp  Tired_Sepehr.cpp  Troubleshooting_server.cpp
12/: Birthday_party.cpp  Phonebook.cpp  Security_issue.cpp
(+5 files in other folders)
